# SoundBird

./: .gitmodules  CMakeLists.txt
assets/: sprites.don
src/: application.cpp  application.h  main.cpp
